--- a/app/Resources/views/_partials/_flash_messages.html.twig
+++ b/app/Resources/views/_partials/_flash_messages.html.twig
@@ -20,7 +20,7 @@
                     {% elseif type == 'danger' %}
                         <span class="glyphicon glyphicon-exclamation-sign"></span>
                     {% endif %}
-                    {{ message }}
+                    {{ message|raw }}
                 </strong>
             </div>
         {% endfor %}
