admin downloads done

--- a/app/Resources/views/admin/_partials/_sidebar.html.twig
+++ b/app/Resources/views/admin/_partials/_sidebar.html.twig
@@ -101,6 +101,18 @@
                     {% if 'admin_bill_remessa' in app.request.attributes.get('_route') %}open{% endif %}"></span>
                 </a>
             </li>
+            <li class="nav-item
+            {% if 'admin_downloads' in app.request.attributes.get('_route') %}active{% endif %}">
+                <a href="{{ path('admin_downloads_index') }}" class="nav-link">
+                    <i class="icon-link"></i>
+                    <span class="title">{{ 'admin.downloads.title'|trans }}</span>
+                    {% if 'admin_downloads' in app.request.attributes.get('_route') %}
+                        <span class="selected"></span>
+                    {% endif %}
+                    <span class="arrow
+                    {% if 'admin_downloads' in app.request.attributes.get('_route') %}open{% endif %}"></span>
+                </a>
+            </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">
                     <i class="icon-layers"></i>
