--- a/app/Resources/views/admin/downloads/edit.html.twig
+++ b/app/Resources/views/admin/downloads/edit.html.twig
@@ -1,5 +1,16 @@
 {% extends 'admin/base.html.twig' %}
 
+{% block stylesheets %}
+    {% embed 'admin/_partials/_block_stylesheets.html.twig' %}
+
+        {% block page_level_plugins %}
+            <link rel="stylesheet"
+                  href="{{ asset('bower_components/bootstrap-datetimepicker/css/datetimepicker.css') }}">
+        {% endblock %}
+
+    {% endembed %}
+{% endblock %}
+
 {% block page_content %}
 
     {% embed 'admin/_partials/_default_resource.html.twig' with {'route_index' : 'admin_downloads_index'} %}
@@ -28,22 +39,14 @@
         {% block tab_pane %}
             <div role="tabpanel" class="tab-pane active" id="geral">
                 <div class="row">
-                    <div class="col-md-6">
-                        <img src="{{ vich_uploader_asset(downloads, 'imageFile') }}" alt="{{ downloads.imageName }}" width="200"/>
-                    </div>
-                    <div class="col-md-6">{{ form_row(form.imageFile, {'required': false}) }}</div>
+                    <div class="col-md-6">{{ form_row(form.downloadFile, {'required': false}) }}</div>
+                    <div class="col-md-6">{{ form_row(form.description) }}</div>
                 </div>
                 <div class="row">
                     <div class="col-md-12"><hr></div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6">{{ form_row(form.downloadFile, {'required': false}) }}</div>
-                    <div class="col-md-6">{{ form_row(form.description) }}</div>
-                    <div class="col-md-12">
-                        <hr>
-                    </div>
-                </div>
-                <div class="row">
+                    <div class="col-md-6">{{ form_row(form.publishedAt) }}</div>
                     <div class="col-md-6">
                         {{ form_widget(form.isEnabled, {'attr': {'checked': true}}) }}
                     </div>
@@ -57,6 +60,13 @@
 
 {% block javascripts %}
     {% embed 'admin/_partials/_block_javascripts.html.twig' %}
+
+        {% block page_level_plugins %}
+            <script src="{{ asset('admin/assets/global/plugins/moment.min.js') }}"></script>
+            <script src="{{ asset('bower_components/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js') }}"
+                    type="text/javascript"></script>
+            <script src="{{ asset('bower_components/bootstrap-datetimepicker/js/locales/bootstrap-datetimepicker.pt-BR.js') }}"></script>
+        {% endblock %}
 
         {% block page_level_scripts %}
             <script src="{{ asset('admin/assets/pages/scripts/components-bootstrap-switch.min.js') }}"
