--- a/app/Resources/views/site/portal/downloads/index.html.twig
+++ b/app/Resources/views/site/portal/downloads/index.html.twig
@@ -6,6 +6,49 @@
 
         <h3>Downloads</h3>
 
+        <div class="features_sec20">
+            <div class="_container">
+
+                <div id="grid-container" class="cbp-l-grid-projects four">
+
+                    <ul>
+                        {% for download in downloads %}
+                            <li class="cbp-item graphic">
+                                <div class="cbp-caption">
+                                    <div class="cbp-caption-defaultWrap" style="border: 1px solid #e3e3e3">
+                                        <img src="{{ asset('site/assets/images/downloads-item.jpg') }}" alt=""
+                                             style="cursor: pointer"
+                                             onclick="window.location='{{ path('site_portal_downloads_download', {id: download.id}) }}'"/>
+                                    </div>
+                                    <div class="cbp-caption-activeWrap">
+                                        <div class="cbp-l-caption-alignCenter">
+                                            <div class="cbp-l-caption-body">
+                                                <a href="{{ path('site_portal_downloads_download', {id: download.id}) }}"
+                                                   class="cbp-l-caption-buttonLeft">
+                                                    DOWNLOAD
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="threeborder">
+                                    <div class="cbp-l-grid-projects-title">{{ download.description }}</div>
+                                    <div class="cbp-l-grid-projects-desc">{{ download.publishedAt|date('d/m/Y H:i') }}</div>
+                                </div>
+                            </li>
+                        {% endfor %}
+
+                    </ul>
+                </div>
+                <div class="cbp-l-loadMore-text">
+                    <div data-href="#" class="cbp-l-loadMore-text-link"></div>
+                </div>
+
+            </div>
+        </div><!-- end content area -->
+
+        <div class="clearfix"></div>
+
     </div>
 
 {% endblock %}
