--- a/app/Resources/views/admin/_partials/_default_table_list.html.twig
+++ b/app/Resources/views/admin/_partials/_default_table_list.html.twig
@@ -39,6 +39,7 @@
                             <tbody>
                             {% block table_tr_td %}{% endblock %}
                             </tbody>
+                            {% block table_tfoot %}{% endblock %}
                         </table>
 
                     </div>
