--- a/app/Resources/views/admin/bill/index.html.twig
+++ b/app/Resources/views/admin/bill/index.html.twig
@@ -143,7 +143,7 @@
                     <td>{{ bill.description }}</td>
                     <td>{{ bill.dueDateAt|date }}</td>
                     <td>{{ bill.amount|number_format }}</td>
-                    <td>{{ bill.paymentDateAt|date }}</td>
+                    <td>{% if bill.paymentDateAt %}{{ bill.paymentDateAt|date }}{% else %}-{% endif %}</td>
                     <td>{{ bill.amountPaid|number_format }}</td>
                     <td>
                         {% if bill.isDateOverDue %}
@@ -199,26 +199,6 @@
             {% endfor %}
         {% endblock %}
 
-        {% block table_tfoot %}
-            <tfoot>
-            <tr>
-                <th colspan="8">&nbsp;</th>
-                <th colspan="2">A Receber</th>
-                <th>R$ {{ toReceive|number_format }}</th>
-            </tr>
-            <tr>
-                <th colspan="8">&nbsp;</th>
-                <th colspan="2">Vencidas</th>
-                <th>R$ {{ overdue|number_format }}</th>
-            </tr>
-            <tr>
-                <th colspan="8">&nbsp;</th>
-                <th colspan="2">Recebidas</th>
-                <th>R$ {{ received|number_format }}</th>
-            </tr>
-            </tfoot>
-        {% endblock %}
-
         {% block list_info %}
             Exibindo {{ bills.currentPageOffsetStart }} a
             {{ bills.currentPageOffsetEnd }} de
@@ -230,6 +210,32 @@
                 routeName: 'admin_bill_index',
                 routeParams: app.request.query.all
             }) }}
+        {% endblock %}
+
+    {% endembed %}
+
+    {% embed 'admin/_partials/_default_table_list.html.twig' %}
+
+        {% block caption_subject %}
+            {{ 'admin.bill.resume'|trans }}
+        {% endblock %}
+
+        {% block body_hr_first %}{% endblock %}
+
+        {% block table_tr_th %}
+            <tr>
+                <th>A Receber</th>
+                <th>Vencidas</th>
+                <th>Recebidas</th>
+            </tr>
+        {% endblock %}
+
+        {% block table_tr_td %}
+            <tr>
+                <td>R$ {{ toReceive|number_format }}</td>
+                <td>R$ {{ overdue|number_format }}</td>
+                <td>R$ {{ received|number_format }}</td>
+            </tr>
         {% endblock %}
 
     {% endembed %}
@@ -314,15 +320,15 @@
 
 {% endblock %}
 
-{% block javascripts %}
-    {% embed 'admin/_partials/_block_javascripts.html.twig' %}
+    {% block javascripts %}
+        {% embed 'admin/_partials/_block_javascripts.html.twig' %}
 
-        {% block page_level_plugins %}
-            <script src="{{ asset('admin/assets/global/plugins/moment.min.js') }}"></script>
-            <script src="{{ asset('bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js') }}"
-                    type="text/javascript"></script>
-            <script src="{{ asset('bower_components/bootstrap-datepicker/dist/locales/bootstrap-datepicker.pt-BR.min.js') }}"></script>
-        {% endblock %}
+            {% block page_level_plugins %}
+                <script src="{{ asset('admin/assets/global/plugins/moment.min.js') }}"></script>
+                <script src="{{ asset('bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js') }}"
+                        type="text/javascript"></script>
+                <script src="{{ asset('bower_components/bootstrap-datepicker/dist/locales/bootstrap-datepicker.pt-BR.min.js') }}"></script>
+            {% endblock %}
 
-    {% endembed %}
-{% endblock %}
+        {% endembed %}
+    {% endblock %}
