--- a/app/Resources/views/admin/_partials/_default_dashboard_portlet_bill.html.twig
+++ b/app/Resources/views/admin/_partials/_default_dashboard_portlet_bill.html.twig
@@ -14,7 +14,7 @@
     <div class="portlet-body">
         <div class="scroller" style="height: 300px;" data-always-visible="1" data-rail-visible="0">
             <div class="table-responsive">
-                <table class="table table-striped table table-hover table-light ">
+                <table class="table table-striped table-light table-advance table-hover">
                     <thead>
                     {% block thead %}
                     {% endblock %}
@@ -32,7 +32,7 @@
                 {{ bills.currentPageOffsetEnd }} de
                 {{ bills.nbResults }} registros
             </div>
-            <div class="btn-arrow-link pull-right bold font-green uppercase h4">
+            <div class="btn-arrow-link pull-right bold _font-green uppercase">
                 Total Geral: R$ {{ billsTotal|number_format }}
             </div>
         </div>
