--- a/app/Resources/views/admin/dashboard.html.twig
+++ b/app/Resources/views/admin/dashboard.html.twig
@@ -73,7 +73,6 @@
             } %}
                 {% block thead %}
                     <tr class="uppercase">
-                        <th>ID</th>
                         <th>{{ 'admin.customers.title_single'|trans }}</th>
                         <th>{{ 'admin.bill.fields.dueDateAt'|trans }}</th>
                         <th>{{ 'admin.bill.fields.amount'|trans }}</th>
@@ -83,14 +82,20 @@
                 {% block tbody %}
                     {% for bill in toReceive %}
                         <tr>
-                            <td>{{ bill.id }}</td>
-                            <td>{{ bill.customer.name }}</td>
+                            <td class="highlight">
+                                <div class="warning"></div>
+                                <a href="javascript:;"> {{ bill.customer.name }} </a>
+                            </td>
                             <td>{{ bill.dueDateAt|date }}</td>
-                            <td>{{ bill.amount|number_format }}</td>
+                            <td>
+                                <span class="label label-sm label-warning">
+                                    {{ bill.amount|number_format }}
+                                </span>
+                            </td>
                             <td>
                                 <a href="{{ path('admin_bill_edit', {id: bill.id}) }}"
                                    class="btn btn-outline btn-sm green">
-                                    <span class="fa fa-edit"></span> Editar
+                                    <span class="fa fa-edit"></span>
                                 </a>
                             </td>
                         </tr>
@@ -108,7 +113,6 @@
             } %}
                 {% block thead %}
                     <tr class="uppercase">
-                        <th>ID</th>
                         <th>{{ 'admin.customers.title_single'|trans }}</th>
                         <th>{{ 'admin.bill.fields.paymentDateAt'|trans }}</th>
                         <th>{{ 'admin.bill.fields.amountPaid'|trans }}</th>
@@ -118,14 +122,20 @@
                 {% block tbody %}
                     {% for bill in received %}
                         <tr>
-                            <td>{{ bill.id }}</td>
-                            <td>{{ bill.customer.name }}</td>
+                            <td class="highlight">
+                                <div class="success" style="border-left: 2px solid #26C281!important"></div>
+                                <a href="javascript:;"> {{ bill.customer.name }} </a>
+                            </td>
                             <td>{{ bill.paymentDateAt|date }}</td>
-                            <td>{{ bill.amountPaid|number_format }}</td>
+                            <td>
+                                <span class="label label-sm label-success bg-green-jungle">
+                                    {{ bill.amountPaid|number_format }}
+                                </span>
+                            </td>
                             <td>
                                 <a href="{{ path('admin_bill_edit', {id: bill.id}) }}"
                                    class="btn btn-outline btn-sm green">
-                                    <span class="fa fa-edit"></span> Editar
+                                    <span class="fa fa-edit"></span>
                                 </a>
                             </td>
                         </tr>
@@ -143,7 +153,6 @@
             } %}
                 {% block thead %}
                     <tr class="uppercase">
-                        <th>ID</th>
                         <th>{{ 'admin.customers.title_single'|trans }}</th>
                         <th>{{ 'admin.bill.fields.dueDateAt'|trans }}</th>
                         <th>{{ 'admin.bill.fields.amount'|trans }}</th>
@@ -153,14 +162,20 @@
                 {% block tbody %}
                     {% for bill in overdue %}
                         <tr>
-                            <td>{{ bill.id }}</td>
-                            <td>{{ bill.customer.name }}</td>
+                            <td class="highlight">
+                                <div class="danger"></div>
+                                <a href="javascript:;"> {{ bill.customer.name }} </a>
+                            </td>
                             <td>{{ bill.dueDateAt|date }}</td>
-                            <td>{{ bill.amount|number_format }}</td>
+                            <td>
+                                <span class="label label-sm label-danger">
+                                    {{ bill.amount|number_format }}
+                                </span>
+                            </td>
                             <td>
                                 <a href="{{ path('admin_bill_edit', {id: bill.id}) }}"
                                    class="btn btn-outline btn-sm green">
-                                    <span class="fa fa-edit"></span> Editar
+                                    <span class="fa fa-edit"></span>
                                 </a>
                             </td>
                         </tr>
