--- a/web/admin/assets/global/css/custom.css
+++ b/web/admin/assets/global/css/custom.css
@@ -104,3 +104,10 @@
 
 /* END REQUIRED LABEL */
 
+.table-striped>tbody>tr:nth-of-type(odd) {
+    background-color: #f4f4f4;
+}
+
+.table-advance thead tr th {
+    background-color: #fff !important;
+}
