--- a/app/Resources/views/admin/downloads/new.html.twig
+++ b/app/Resources/views/admin/downloads/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'admin/base.html.twig' %}
 
 {% block stylesheets %}
-    {% embed 'admin/_partials/_block_stylesheets.html.twig' %}
+    {% embDoed 'admin/_partials/_block_stylesheets.html.twig' %}
 
         {% block page_level_plugins %}
             <link rel="stylesheet"
