--- a/app/Resources/views/admin/downloads/new.html.twig
+++ b/app/Resources/views/admin/downloads/new.html.twig
@@ -1,11 +1,15 @@
 {% extends 'admin/base.html.twig' %}
 
 {% block stylesheets %}
-    {% embDoed 'admin/_partials/_block_stylesheets.html.twig' %}
+    {% embed 'admin/_partials/_block_stylesheets.html.twig' %}
 
         {% block page_level_plugins %}
             <link rel="stylesheet"
                   href="{{ asset('bower_components/bootstrap-datetimepicker/css/datetimepicker.css') }}">
+            <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
+            <link rel="stylesheet" href="{{ asset('bower_components/blueimp-file-upload/css/jquery.fileupload.css') }}">
+            <link rel="stylesheet"
+                  href="{{ asset('bower_components/blueimp-file-upload/css/jquery.fileupload-ui.css') }}">
         {% endblock %}
 
     {% endembed %}
@@ -13,65 +17,218 @@
 
 {% block page_content %}
 
-    {% embed 'admin/_partials/_default_resource.html.twig' with {'route_index' : 'admin_downloads_index'} %}
+    <div class="row">
+        <div class="col-md-12">
 
-        {% block form_start %}
-            {{ form_start(form, {'action': path('admin_downloads_new') ~ pagination.buildQuery,
-                'attr' : {'class' : '_form-horizontal'}}) }}
-        {% endblock %}
-
-        {% block icon_list %}
-            <i class="icon-link font-green-sharp bold"></i>
-        {% endblock %}
-
-        {% block caption_subject %}
-            <span class="caption-subject font-green-sharp bold uppercase">
-                {{ 'admin.downloads.new'|trans }}
-            </span>
-        {% endblock %}
-
-        {% block nav_tabs %}
-            <li role="presentation" class="active">
-                <a href="#geral" aria-controls="geral" role="tab" data-toggle="tab">Geral</a>
-            </li>
-        {% endblock %}
-
-        {% block tab_pane %}
-            <div role="tabpanel" class="tab-pane active" id="geral">
-                <div class="row">
-                    <div class="col-md-6">{{ form_row(form.downloadFile) }}</div>
-                    <div class="col-md-6">{{ form_row(form.description) }}</div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">{{ form_row(form.publishedAt, {'attr': {
-                            'value': 'now'|date('d-m-Y H:i')
-                        }}) }}</div>
-                    <div class="col-md-6">
-                        {{ form_widget(form.isEnabled, {'attr': {'checked': true}}) }}
+            <div class="portlet light bordered">
+                <div class="portlet-title">
+                    <div class="caption">
+                        <i class="icon-link font-green-sharp bold"></i>
+                        <span class="caption-subject font-green-sharp bold uppercase">{{ 'admin.downloads.new'|trans }}</span>
                     </div>
+
+                    <div class="actions btn-set">
+                        <a href="{{ path('admin_downloads_index') ~ pagination.buildQuery }}"
+                           class="btn red">
+                            <span class="fa fa-remove"></span> Cancelar
+                        </a>
+                    </div>
+
                 </div>
+
+                <div class="portlet-body">
+
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation" class="active">
+                            <a href="#geral" aria-controls="geral" role="tab" data-toggle="tab">Geral</a>
+                        </li>
+                    </ul>
+
+                    <div class="tab-content"><br>
+                        <div role="tabpanel" class="tab-pane active" id="geral">
+
+                            <form id="fileupload" action="{{ absolute_url(path('api_downloads_new')) }}" method="POST"
+                                  enctype="multipart/form-data">
+                                <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
+                                <div class="row fileupload-buttonbar">
+                                    <div class="col-lg-7">
+                                        <!-- The fileinput-button span is used to style the file input field as button -->
+                                        <span class="btn green fileinput-button">
+                                            <i class="fa fa-plus"></i>
+                                            <span> Add files... </span>
+                                            {#<input type="file" name="downloadFile[]" multiple="">#}
+                                            <input type="file" name="downloadFile">
+                                            <input type="hidden" name="description" value="Teste Ajax">
+                                            <input type="hidden" name="publishedAt" value="24-07-2017 16:26">
+                                        </span>
+                                        <button type="submit" class="btn blue start">
+                                            <i class="fa fa-upload"></i>
+                                            <span> Start upload </span>
+                                        </button>
+                                        <button type="reset" class="btn warning cancel">
+                                            <i class="fa fa-ban-circle"></i>
+                                            <span> Cancel upload </span>
+                                        </button>
+                                        <button type="button" class="btn red delete">
+                                            <i class="fa fa-trash"></i>
+                                            <span> Delete </span>
+                                        </button>
+                                        <input type="checkbox" class="toggle">
+                                        <!-- The global file processing state -->
+                                        <span class="fileupload-process"> </span>
+                                    </div>
+                                    <!-- The global progress information -->
+                                    <div class="col-lg-5 fileupload-progress fade">
+                                        <!-- The global progress bar -->
+                                        <div class="progress progress-striped active" role="progressbar"
+                                             aria-valuemin="0" aria-valuemax="100">
+                                            <div class="progress-bar progress-bar-success" style="width:0%;"></div>
+                                        </div>
+                                        <!-- The extended global progress information -->
+                                        <div class="progress-extended"> &nbsp; </div>
+                                    </div>
+                                </div>
+                                <!-- The table listing the files available for upload/download -->
+                                <table role="presentation" class="table table-striped clearfix">
+                                    <tbody class="files"></tbody>
+                                </table>
+                            </form>
+
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
-        {% endblock %}
 
-    {% endembed %}
+        </div>
+    </div>
+
+    <!-- The blueimp Gallery widget -->
+    <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls" data-filter=":even">
+        <div class="slides"></div>
+        <h3 class="title"></h3>
+        <a class="prev">‹</a>
+        <a class="next">›</a>
+        <a class="close">×</a>
+        <a class="play-pause"></a>
+        <ol class="indicator"></ol>
+    </div>
+    <!-- The template to display files available for upload -->
+    <script id="template-upload" type="text/x-tmpl">
+        {{ '{% for (var i=0, file; file=o.files[i]; i++) { %}
+    <tr class="template-upload fade">
+        <td>
+            <span class="preview"></span>
+        </td>
+        <td>
+            <p class="name">{%=file.name%}</p>
+            <strong class="error text-danger"></strong>
+        </td>
+        <td>
+            <p class="size">Processing...</p>
+            <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"><div class="progress-bar progress-bar-success" style="width:0%;"></div></div>
+        </td>
+        <td>
+            {% if (!i && !o.options.autoUpload) { %}
+                <button class="btn btn-primary start" disabled>
+                    <i class="glyphicon glyphicon-upload"></i>
+                    <span>Start</span>
+                </button>
+            {% } %}
+            {% if (!i) { %}
+                <button class="btn btn-warning cancel">
+                    <i class="glyphicon glyphicon-ban-circle"></i>
+                    <span>Cancel</span>
+                </button>
+            {% } %}
+        </td>
+    </tr>
+{% } %}' }}
+
+    </script>
+    <!-- The template to display files available for download -->
+    <script id="template-download" type="text/x-tmpl">
+        {{ '{% for (var i=0, file; file=o.files[i]; i++) { %}
+    <tr class="template-download fade">
+        <td>
+            <span class="preview">
+                {% if (file.thumbnailUrl) { %}
+                    <a href="{%=file.url%}" title="{%=file.name%}" download="{%=file.name%}" data-gallery><img src="{%=file.thumbnailUrl%}"></a>
+                {% } %}
+            </span>
+        </td>
+        <td>
+            <p class="name">
+                {% if (file.url) { %}
+                    <a href="{%=file.url%}" title="{%=file.name%}" download="{%=file.name%}" {%=
+        file.thumbnailUrl?"data-gallery":""%}>{%=file.name%}</a>
+                {% } else { %}
+                    <span>{%=file.name%}</span>
+                {% } %}
+            </p>
+            {% if (file.error) { %}
+                <div><span class="label label-danger">Error</span> {%=file.error%}</div>
+            {% } %}
+        </td>
+        <td>
+            <span class="size">{%=o.formatFileSize(file.size)%}</span>
+        </td>
+        <td>
+            {% if (file.deleteUrl) { %}
+                <button class="btn btn-danger delete" data-type="{%=file.deleteType%}" data-url="{%=
+        file.deleteUrl%}"{% if (file.deleteWithCredentials) { %} data-xhr-fields=\'{"withCredentials":true}\'{% } %}>
+                    <i class="glyphicon glyphicon-trash"></i>
+                    <span>Delete</span>
+                </button>
+                <input type="checkbox" name="delete" value="1" class="toggle">
+            {% } else { %}
+                <button class="btn btn-warning cancel">
+                    <i class="glyphicon glyphicon-ban-circle"></i>
+                    <span>Cancel</span>
+                </button>
+            {% } %}
+        </td>
+    </tr>
+{% } %}' }}
+
+    </script>
 
 {% endblock %}
 
-{% block javascripts %}
-    {% embed 'admin/_partials/_block_javascripts.html.twig' %}
+    {% block javascripts %}
+        {% embed 'admin/_partials/_block_javascripts.html.twig' %}
 
-        {% block page_level_plugins %}
-            <script src="{{ asset('admin/assets/global/plugins/moment.min.js') }}"></script>
-            <script src="{{ asset('bower_components/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js') }}"
-                    type="text/javascript"></script>
-            <script src="{{ asset('bower_components/bootstrap-datetimepicker/js/locales/bootstrap-datetimepicker.pt-BR.js') }}"></script>
-        {% endblock %}
+            {% block page_level_plugins %}
+                <script src="{{ asset('admin/assets/global/plugins/moment.min.js') }}"></script>
+                <script src="{{ asset('bower_components/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js') }}"
+                        type="text/javascript"></script>
+                <script src="{{ asset('bower_components/bootstrap-datetimepicker/js/locales/bootstrap-datetimepicker.pt-BR.js') }}"></script>
+                <script src="{{ asset('bower_components/blueimp-file-upload/js/vendor/jquery.ui.widget.js') }}"></script>
+                <script src="{{ asset('bower_components/blueimp-tmpl/js/tmpl.min.js') }}"></script>
+                <script src="{{ asset('bower_components/blueimp-load-image/js/load-image.all.min.js') }}"></script>
+                <script src="{{ asset('bower_components/blueimp-canvas-to-blob/js/canvas-to-blob.min.js') }}"></script>
+                <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
+                <script src="{{ asset('bower_components/blueimp-file-upload/js/jquery.iframe-transport.js') }}"></script>
+                <script src="{{ asset('bower_components/blueimp-file-upload/js/jquery.fileupload.js') }}"></script>
+                <script src="{{ asset('bower_components/blueimp-file-upload/js/jquery.fileupload-process.js') }}"></script>
+                <script src="{{ asset('bower_components/blueimp-file-upload/js/jquery.fileupload-image.js') }}"></script>
+                <script src="{{ asset('bower_components/blueimp-file-upload/js/jquery.fileupload-audio.js') }}"></script>
+                <script src="{{ asset('bower_components/blueimp-file-upload/js/jquery.fileupload-video.js') }}"></script>
+                <script src="{{ asset('bower_components/blueimp-file-upload/js/jquery.fileupload-validate.js') }}"></script>
+                <script src="{{ asset('bower_components/blueimp-file-upload/js/jquery.fileupload-ui.js') }}"></script>
+            {% endblock %}
 
-        {% block page_level_scripts %}
-            <script src="{{ asset('admin/assets/pages/scripts/components-bootstrap-switch.min.js') }}"
-                    type="text/javascript"></script>
-            <script src="{{ asset('admin/assets/pages/scripts/components-date-time-pickers.js') }}"></script>
-        {% endblock %}
+            {% block page_level_scripts %}
+                <script src="{{ asset('admin/assets/pages/scripts/components-bootstrap-switch.min.js') }}"
+                        type="text/javascript"></script>
+                <script src="{{ asset('admin/assets/pages/scripts/components-date-time-pickers.js') }}"></script>
+                <script src="{{ asset('admin/assets/pages/scripts/form-fileupload.js') }}"></script>
+                <!-- The XDomainRequest Transport is included for cross-domain file deletion for IE 8 and IE 9 -->
+                <!--[if (gte IE 8)&(lt IE 10)]>
+                <script src="{{ asset('bower_components/blueimp-file-upload/js/cors/jquery.xdr-transport.js') }}"></script>
+                <![endif]-->
+            {% endblock %}
 
-    {% endembed %}
-{% endblock %}
+        {% endembed %}
+    {% endblock %}
